--- a/portfolio/src/main/resources/static/styles/evidence/portfolio.css
+++ b/portfolio/src/main/resources/static/styles/evidence/portfolio.css
@@ -1,5 +1,5 @@
 
-#evidence__header-div {
+.evidence__header-div {
     position: relative;
     padding: 15px 15px 15px 15px;
     border: 1px solid var(--color-accent);
@@ -9,56 +9,63 @@
     margin-bottom: 15px;
 }
 
-#evidence__header-title {
+.evidence__header-title {
     margin-left: 30px;
 }
 
-#evidence__header-project {
+.evidence__header-project {
     margin-left: 30px;
     margin-bottom: 0;
     font-weight: normal;
 }
 
-.add-evidence__button {
-    position: relative;
+
+
+.portfolio-mid__portfolio-button {
+    color: white;
     border: 1px solid var(--color-accent);
-    border-radius: 5px;
-    background-color: var(--color-complement);
-    padding: 10px;
-    height: 3rem;
-    line-height: 3rem;
+    background-color: #e06c41;
+    border-radius: 3px;
+    padding: 10px 30px 10px 30px;
+    box-shadow: none !important;
+    width: 25%;
     font-size: 1.5rem;
     text-decoration: none;
-    color: black;
 }
 
-.add-evidence__button:hover {
+.portfolio-mid__portfolio-button:hover {
     color: inherit;
     background-color: rgba(168, 40, 16, 0.3); /* Accent Colour */
 }
 
-.btn-fill-tertiary:hover {
+.add-evidence__container {
+    display: flex;
+    justify-content: center;
+}
+
+.add-evidence__button {
+    border: 1px solid var(--color-accent);
+    border-radius: 5px;
+    background-color: var(--color-complement);
+    padding: 10px;
+    font-size: 1.5rem;
+    text-decoration: none;
+    color: black;
+    width: fit-content;
+}
+
+.add-evidence__button:hover {
     color: #f78e55;
     border-color: #f78e55;
     background-color: #f4ebe6;
-    height: 3rem;
     box-shadow: none !important;
-    width: 100%;
-    font-size: 1.5rem;
 }
 
-.btn-fill-tertiary {
-    color: white;
-    border-color: var(--color-accent);
-    background-color: #e06c41;
-    border-radius: 3px;
-    padding: 10px;
-    height: 3rem;
-    box-shadow: none !important;
-    width: 100%;
-    font-size: 1.5rem;
-    text-decoration: none;
+.col-lg {
+    padding-top: 70px;
 }
+
+/* Evidence Card */
 
 .skills {
     background-color: var(--color-secondary);
@@ -110,3 +117,4 @@
     flex-wrap: wrap;
     border-top: 1px solid var(--color-accent);
 }
+
