--- a/portfolio/src/main/resources/templates/templatesEvidence/portfolio.html
+++ b/portfolio/src/main/resources/templates/templatesEvidence/portfolio.html
@@ -29,19 +29,24 @@
 <nav th:replace="fragments/navbar :: navbar"></nav>
 
 <div id="page-content" class="constrict">
-    <div id="container">
-        <div id="evidence__header-div">
-            <h1 id="evidence__header-title" th:text="(${owner} ? 'Your portfolio' : ${pageUser.getFullName()} + 's portfolio')"></h1>
-            <h2 id="evidence__header-project" th:text="${currentProject.getName}"></h2>
-        </div>
+
+    <div class="evidence__header-div">
+        <h1 class="evidence__header-title" th:text="(${owner} ? 'Your portfolio' : ${pageUser.getFullName()} + 's portfolio')"></h1>
+        <h2 class="evidence__header-project" th:text="${currentProject.getName}"></h2>
     </div>
+
     <div class="container">
-        <a th:if="${owner}" class="add-evidence__button" th:href="@{editEvidence-{evidenceId}(evidenceId=-1)}">Add Evidence</a>
-        <a class="btn-fill-tertiary" th:href="@{${owner} ? 'profile' : 'profile-' + ${pageUser.id}}">Profile</a>
+            <a class="portfolio-mid__portfolio-button" th:href="@{${owner} ? 'profile' : 'profile-' + ${pageUser.id}}">Profile</a>
         <div class="row">
             <div class="col-lg-8">
+                <div class="add-evidence__container">
+                    <button th:if="${owner}" class="add-evidence__button" th:href="@{editEvidence-{evidenceId}(evidenceId=-1)}">
+                        Add Evidence
+                    </button>
+                </div>
                 <div th:replace="fragments/evidence"></div>
             </div>
+
             <div class="col-lg">
                 <div class="categories">
                     <!-- Categories Tab -->
