--- a/portfolio/src/main/resources/templates/templatesEvidence/portfolio.html
+++ b/portfolio/src/main/resources/templates/templatesEvidence/portfolio.html
@@ -36,13 +36,11 @@
     </div>
 
     <div class="container">
-            <a class="portfolio-mid__portfolio-button" th:href="@{${owner} ? 'profile' : 'profile-' + ${pageUser.id}}">Profile</a>
+            <a class="portfolio-navigation__portfolio-button" th:href="@{${owner} ? 'profile' : 'profile-' + ${pageUser.id}}">Profile</a>
         <div class="row">
             <div class="col-lg-8">
                 <div class="add-evidence__container">
-                    <button th:if="${owner}" class="add-evidence__button" th:href="@{editEvidence-{evidenceId}(evidenceId=-1)}">
-                        Add Evidence
-                    </button>
+                    <a th:if="${owner}" class="add-evidence__button" th:href="@{editEvidence-{evidenceId}(evidenceId=-1)}"> Add Evidence</a>
                 </div>
                 <div th:replace="fragments/evidence"></div>
             </div>
