--- a/portfolio/src/main/resources/static/styles/evidence/portfolio.css
+++ b/portfolio/src/main/resources/static/styles/evidence/portfolio.css
@@ -19,9 +19,11 @@
     font-weight: normal;
 }
 
+.portfolio-navigation__container {
 
+}
 
-.portfolio-mid__portfolio-button {
+.portfolio-navigation__portfolio-button {
     color: white;
     border: 1px solid var(--color-accent);
     background-color: #e06c41;
@@ -33,7 +35,7 @@
     text-decoration: none;
 }
 
-.portfolio-mid__portfolio-button:hover {
+.portfolio-navigation__portfolio-button:hover {
     color: inherit;
     background-color: rgba(168, 40, 16, 0.3); /* Accent Colour */
 }
@@ -45,7 +47,7 @@
 
 .add-evidence__button {
     border: 1px solid var(--color-accent);
-    border-radius: 5px;
+    border-radius: 25px;
     background-color: var(--color-complement);
     padding: 10px;
     font-size: 1.5rem;
@@ -116,5 +118,22 @@
     display: flex;
     flex-wrap: wrap;
     border-top: 1px solid var(--color-accent);
+}
+
+.all-evidence-link {
+    border: 1px solid #A82810;
+    border-radius: 5px;
+    background-color: var(--color-complement);
+    padding: 2px 4px 2px 4px;
+    margin: 4px;
+    display: inline;
+    text-decoration: none;
+    color: black;
+    text-align: center;
+}
+
+.all-evidence-link:hover {
+    color:inherit;
+    filter: brightness(85%);
 }
 
