--- a/portfolio/src/main/resources/templates/fragmentsGroup/groupRepositorySettings.html
+++ b/portfolio/src/main/resources/templates/fragmentsGroup/groupRepositorySettings.html
@@ -28,7 +28,7 @@
                         <input type="text" id="group-repository__name" name="repositoryName" th:value="${groupRepositorySettings.getRepositoryName()}" pattern="(.|\s)*\S(.|\s)*" title="Repository name must not be blank" required>
 
                         <label for="group-repository__api-key">Repository API Key *</label>
-                        <input type="text" id="group-repository__api-key" name="repositoryApiKey" th:value="${groupRepositorySettings.getGitlabAccessToken()}" minlength="20" pattern="(.|\s)*\S(.|\s)*" title="Repository API key must be at least 20 characters" required>
+                        <input type="text" id="group-repository__api-key" name="repositoryApiKey" th:value="${groupRepositorySettings.getGitlabAccessToken()}" minlength="20" maxlength="50" pattern="(.|\s)*\S(.|\s)*" title="Repository API key must be at least 20 characters" required>
 
                         <label for="group-repository__id">Repository ID *</label>
                         <input type="text" id="group-repository__id" name="repositoryId" th:value="${groupRepositorySettings.getGitlabProjectId()}" pattern="[0-9]+" title="Repository id must be an integer" required>
