--- a/portfolio/src/main/resources/templates/fragmentsGroup/groupStatistics.html
+++ b/portfolio/src/main/resources/templates/fragmentsGroup/groupStatistics.html
@@ -1,5 +1,17 @@
 <!DOCTYPE html>
+
 <div class="group-statistics__flex-container">
+    <p th:text="${selectedDateRefine.getTitle()}"></p>
+    <p th:text="${selectedDateRefine.getStartDate()}"></p>
+    <p th:text="${selectedDateRefine.getEndDate()}"></p>
+    <div class="dropdown">
+        <button class="btn btn-primary dropdown-toggle dropdown__button" type="button" data-toggle="dropdown">Refine Graphs</button>
+        <ul class="dropdown-menu">
+            <li th:each="dateRefineOption: ${dateRefiningOptions}">
+                <a class="dropdown__link" href="#" th:text="${dateRefineOption.getTitle()}"></a>
+            </li>
+        </ul>
+    </div>
     <div class="skills-categories-chart__flex-container">
         <div id="group-chart__categories-chart"></div>
         <div id="group-chart__skills-chart"></div>
