--- a/portfolio/src/main/resources/templates/fragments/evidence.html
+++ b/portfolio/src/main/resources/templates/fragments/evidence.html
@@ -35,6 +35,22 @@
                     <a th:each="category: ${evidence.getCategories}" class="category__link" th:text="${category}" th:href="@{${owner} ? 'portfolio' : 'portfolio-' + ${pageUser.id}} + '-categories?category=' + ${category}"></a>
                     <a th:each="skill: ${evidence.getSkills}"  class="skill__link" th:text="${skill.replaceAll('_', ' ')}" th:href="@{${owner} ? 'portfolio' : 'portfolio-' + ${pageUser.id}} + '-skill?skill=' + ${skill}"></a>
                 </div>
+                <!-- Commits -->
+                <h4 class="evidence-form__commits-title">Linked Commits</h4>
+                <div class="evidence-form__commit-details" th:if="${evidence.getCommits().size() >  0}" th:each="commit: ${evidence.getCommits}">
+                  <div class="evidence-form__commits-details">
+                    <div class="evidence-form__commits-link-container">
+                      <p class="evidence-form__commits-link" th:text="'Commit: '"></p>
+                      <a class="evidence-form__commits-link" th:text="${commit.getLink}"></a>
+                    </div>
+                    <p class="evidence-form__commits-message" th:text="${commit.getDescription}"></p>
+                    <div class="evidence-form__commits-date-author-container">
+                      <p class="evidence-form__commits-author" th:text="'Author: ' +${commit.getAuthor}"></p>
+                      <p class="evidence-form__commits-date" th:text="'Date: ' +${commit.getDate}"></p>
+                    </div>
+                  </div>
+                </div>
+<!--              WebLinks-->
                 <div class="web-link__container">
                   <div class="web-link__header-wrapper">
                     <div th:if="${evidence.getNumberWeblinks() >  0}">
@@ -54,7 +70,7 @@
                     </div>
                   <br/>
                 </div>
-                <!-- Edit/Delete icons !-->
+                <!-- Edit/Delete icons -->
                 <div class="evidence-title-div__buttons">
                     <div th:if="${owner}" class="evidence-title-div__button">
                         <form action="#" class="evidence-title--form" th:action="@{deleteEvidence-{evidenceId}(evidenceId=${evidence.getId})}" onSubmit="return confirm('Are you sure you want to delete this piece of evidence?\nThis action cannot be undone.')" th:method="delete" >
