#Feature put commit on same line and spaced nicer

--- a/portfolio/src/main/resources/static/styles/evidence/evidence.css
+++ b/portfolio/src/main/resources/static/styles/evidence/evidence.css
@@ -277,10 +277,10 @@ html {
 
 .evidence-form__commits-link-container {
     font-size: 14px;
-    /*display: flex;*/
-    /*flex-direction: row;*/
-    /*justify-content: space-between;*/
-    /*gap: 5px;*/
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    gap: 5px;
 }
 
 .evidence-form__commits-date-author-container {
