--- a/portfolio/src/main/resources/static/styles/evidence/portfolio.css
+++ b/portfolio/src/main/resources/static/styles/evidence/portfolio.css
@@ -19,23 +19,26 @@
     font-weight: normal;
 }
 
-.portfolio-navigation__container {
-
+.portfolio-navigation__div {
+    display: flex;
+    justify-content: space-between;
+    width: 310px;
 }
 
-.portfolio-navigation__portfolio-button {
+.portfolio-navigation__button {
     color: white;
     border: 1px solid var(--color-accent);
     background-color: #e06c41;
     border-radius: 3px;
     padding: 10px 30px 10px 30px;
     box-shadow: none !important;
-    width: 25%;
+    width: 150px;
+    text-align: center;
     font-size: 1.5rem;
     text-decoration: none;
 }
 
-.portfolio-navigation__portfolio-button:hover {
+.portfolio-navigation__button:hover {
     color: inherit;
     background-color: rgba(168, 40, 16, 0.3); /* Accent Colour */
 }
@@ -47,10 +50,10 @@
 
 .add-evidence__button {
     border: 1px solid var(--color-accent);
-    border-radius: 25px;
+    border-radius: 10px;
     background-color: var(--color-complement);
     padding: 10px;
-    font-size: 1.5rem;
+    font-size: 20px;
     text-decoration: none;
     color: black;
     width: fit-content;
