--- a/portfolio/src/main/resources/templates/templatesEvidence/categories.html
+++ b/portfolio/src/main/resources/templates/templatesEvidence/categories.html
@@ -31,7 +31,8 @@
     </div>
 
     <div class="container">
-        <a class="portfolio-navigation__portfolio-button" th:href="@{${owner} ? 'profile' : 'profile-' + ${pageUser.id}}">Profile</a>
+        <a class="portfolio-navigation__button" th:href="@{${owner} ? 'profile' : 'profile-' + ${pageUser.id}}">Profile</a>
+        <a class="portfolio-navigation__button" th:href="@{${owner} ? 'portfolio' : 'portfolio-' + ${pageUser.id}}">Portfolio</a>
         <div class="row">
             <div class="col-lg-8">
                 <div class="add-evidence__container">
@@ -57,9 +58,6 @@
                         <a class="no-skill__link " th:href="@{${owner} ? 'portfolio' : 'portfolio-' + ${pageUser.id}} + '-skill?skill='">No Skill</a>
                         <a th:each="skill: ${skillsList}"  class="skill__link" th:text="${skill.replaceAll('_', ' ')}" th:href="@{${owner} ? 'portfolio' : 'portfolio-' + ${pageUser.id}} + '-skill?skill=' + ${skill}"></a>
                     </div>
-                </div>
-                <div class="categories">
-                    <a class="all-evidence-link" th:href="@{${owner} ? 'portfolio' : 'portfolio-' + ${pageUser.id}}">All</a>
                 </div>
             </div>
         </div>
