--- a/portfolio/src/main/resources/templates/templatesEvidence/addEvidence.html
+++ b/portfolio/src/main/resources/templates/templatesEvidence/addEvidence.html
@@ -11,6 +11,7 @@
     <script th:src="@{webjars/bootstrap/5.1.3/js/bootstrap.min.js}"></script>
     <title>Add Evidence</title>
     <script th:inline="javascript">
+        const CONTEXT = [[${@environment.getProperty('PORTFOLIO_CONTEXT')}]];
         const ALL_SKILLS = [[${skillsList}]];
         let ALL_USERS = [];
         let ALL_COMMITS = {};
@@ -33,8 +34,7 @@
 
         let repositoryUsers = [[${repositoryUsers}]];
         let sprints = [[${sprints}]];
-        console.log(repositoryUsers);
-        console.log(sprints)
+        let branches = [[${branches}]];
     </script>
 
     <script type="text/javascript" th:inline="javascript" th:each="user, iterInfo: ${users}">
@@ -201,6 +201,25 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div th:if="${commits.size} > 0" class="modal-body add-evidence-commits__wrapper">
+                    <div id="commit-filter-box">
+                        <select class="form-select" id="commit-filter__group-selection" aria-label="group" onchange="updateCommitModal()">
+                            <option th:each="group: ${groups}" th:value="${group.getGroupId()}" th:text="${group.getShortName()}" th:selected="${group.getGroupId()} == ${mainGroup.getGroupId()}"></option>
+                        </select>
+                        <select class="form-select" id="commit-filter__branch-selection" aria-label="branch" onchange="searchCommits()">
+                            <option th:each="branch: ${branches}" th:value="${branch.getName()}" th:text="${branch.getName()}" th:selected="${branch.getDefault()}"></option>
+                        </select>
+                        <select class="form-select" id="commit-filter__member-selection" aria-label="member" onchange="searchCommits()">
+                            <option value="-1" selected>--No user selected--</option>
+                            <option th:each="user: ${repositoryUsers}" th:value="${user.getId()}" th:text="${user.getName()}"></option>
+                        </select>
+                        <input type="search" id="commit-filter__id-search" class="form-control" placeholder="Commit ID"/>
+                        <input type="date" th:value="${startDate}" th:max="${endDate}" id="commit-filter__start-date" onchange="updateMinEndDate()">
+                        <input type="date" th:value="${endDate}" th:min="${startDate}" id="commit-filter__end-date" onchange="updateMaxStartDate()">
+                        <select class="form-select" id="commit-filter__sprint-selection" aria-label="member" onchange="updateCommitSearchDates()">
+                            <option value="-1" selected>--No sprint selected--</option>
+                            <option th:each="sprint: ${sprints}" th:value="${sprint.getId()}" th:text="${sprint.getLabel()}"></option>
+                        </select>
+                    </div>
                     <button class="btn btn-primary" onclick="saveCommitChanges()" data-bs-dismiss="modal">Save Changes</button>
                     <div id="commit-selection-box">
                         <div th:each="commit: ${commits}" th:id="${commit.id}" class="row commit-tag-outside">
