--- a/portfolio/src/main/resources/templates/templatesProject/editSprint.html
+++ b/portfolio/src/main/resources/templates/templatesProject/editSprint.html
@@ -8,6 +8,9 @@
     <link th:href="@{styles/project/addEditSprint.css}" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
     <link th:rel="stylesheet" th:href="@{webjars/bootstrap/5.1.3/css/bootstrap.min.css} "/>
+    <script th:inline="javascript">
+        const isEditing = [[${sprintId}]];
+    </script>
 </head>
 
 <body>
