--- a/portfolio/src/main/resources/static/styles/evidence/evidence.css
+++ b/portfolio/src/main/resources/static/styles/evidence/evidence.css
@@ -262,6 +262,11 @@ html {
     flex-wrap: wrap;
 }
 
+.evidence__categories {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 #weblink-incorrect {
     color: red;
     margin-left: 15px;
