--- a/portfolio/src/main/resources/templates/templatesEvidence/addEvidence.html
+++ b/portfolio/src/main/resources/templates/templatesEvidence/addEvidence.html
@@ -202,23 +202,12 @@
                 </div>
                 <div th:if="${commits.size} > 0" class="modal-body add-evidence-commits__wrapper">
                     <div id="commit-filter-box">
-                        <select class="form-select" id="commit-filter__group-selection" aria-label="group" onchange="updateCommitModal()">
-                            <option th:each="group: ${groups}" th:value="${group.getGroupId()}" th:text="${group.getShortName()}" th:selected="${group.getGroupId()} == ${mainGroup.getGroupId()}"></option>
+                        The rest of this div will be filled in by Javascript. The group id is needed to send
+                        the request for the other information
+                        <select class="form-select" id="commit-filter__group-selection" aria-label="group" onchange="updateCommitModal(); searchCommits();">
+                            <option th:value="${mainGroup.getGroupId()}" th:text="${mainGroup.getShortName()}" selected></option>
                         </select>
-                        <select class="form-select" id="commit-filter__branch-selection" aria-label="branch" onchange="searchCommits()">
-                            <option th:each="branch: ${branches}" th:value="${branch.getName()}" th:text="${branch.getName()}" th:selected="${branch.getDefault()}"></option>
-                        </select>
-                        <select class="form-select" id="commit-filter__member-selection" aria-label="member" onchange="searchCommits()">
-                            <option value="-1" selected>--No user selected--</option>
-                            <option th:each="user: ${repositoryUsers}" th:value="${user.getId()}" th:text="${user.getName()}"></option>
-                        </select>
-                        <input type="search" id="commit-filter__id-search" class="form-control" placeholder="Commit ID"/>
-                        <input type="date" th:value="${startDate}" th:max="${endDate}" id="commit-filter__start-date" onchange="updateMinEndDate()">
-                        <input type="date" th:value="${endDate}" th:min="${startDate}" id="commit-filter__end-date" onchange="updateMaxStartDate()">
-                        <select class="form-select" id="commit-filter__sprint-selection" aria-label="member" onchange="updateCommitSearchDates()">
-                            <option value="-1" selected>--No sprint selected--</option>
-                            <option th:each="sprint: ${sprints}" th:value="${sprint.getId()}" th:text="${sprint.getLabel()}"></option>
-                        </select>
+
                     </div>
                     <button class="btn btn-primary" onclick="saveCommitChanges()" data-bs-dismiss="modal">Save Changes</button>
                     <div id="commit-selection-box">
@@ -241,5 +230,8 @@
     </div>
 </div>
 <script rel="script" th:src="@{scripts/evidence/addEvidence.js}"></script>
+<script>
+    updateCommitModal();
+</script>
 </body>
 </html>
