--- a/portfolio/src/main/resources/templates/templatesEvidence/commitFilterBox.html
+++ b/portfolio/src/main/resources/templates/templatesEvidence/commitFilterBox.html
@@ -1,18 +1,18 @@
 <div id="commit-filter-box">
-    <select class="form-select" id="commit-filter__group-selection" aria-label="group" onchange="updateCommitModal()">
+    <select class="form-select" id="commit-filter__group-selection" aria-label="group" onchange="updateCommitModal(); searchCommits();">
         <option th:each="group: ${groups}" th:value="${group.getGroupId()}" th:text="${group.getShortName()}" th:selected="${group.getGroupId()} == ${mainGroup.getGroupId()}"></option>
     </select>
     <select class="form-select" id="commit-filter__branch-selection" aria-label="branch" onchange="searchCommits()">
         <option th:each="branch: ${branches}" th:value="${branch.getName()}" th:text="${branch.getName()}" th:selected="${branch.getDefault()}"></option>
     </select>
     <select class="form-select" id="commit-filter__member-selection" aria-label="member" onchange="searchCommits()">
-        <option value="-1" selected>--No user selected--</option>
-        <option th:each="user: ${repositoryUsers}" th:value="${user.getId()}" th:text="${user.getName()}"></option>
+        <option value="" selected>--No user selected--</option>
+        <option th:each="user: ${repositoryUsers}" th:value="${user.getName()}" th:text="${user.getName()}"></option>
     </select>
-    <input type="search" id="commit-filter__id-search" class="form-control" placeholder="Commit ID"/>
-    <input type="date" th:value="${startDate}" th:max="${endDate}" id="commit-filter__start-date" onchange="updateMinEndDate()">
-    <input type="date" th:value="${endDate}" th:min="${startDate}" id="commit-filter__end-date" onchange="updateMaxStartDate()">
-    <select class="form-select" id="commit-filter__sprint-selection" aria-label="member" onchange="updateCommitSearchDates()">
+    <input type="search" id="commit-filter__id-search" class="form-control" placeholder="Commit ID" oninput="searchCommits()"/>
+    <input type="date" th:value="${startDate}" th:max="${endDate}" id="commit-filter__start-date" onchange="updateMinEndDate(); searchCommits();">
+    <input type="date" th:value="${endDate}" th:min="${startDate}" id="commit-filter__end-date" onchange="updateMaxStartDate(); searchCommits();">
+    <select class="form-select" id="commit-filter__sprint-selection" aria-label="member" onchange="updateCommitSearchDates(); searchCommits();">
         <option value="-1" selected>--No sprint selected--</option>
         <option th:each="sprint: ${sprints}" th:value="${sprint.getId()}" th:text="${sprint.getLabel()}"></option>
     </select>
