#Feature Added the evidence data over time graph anf styled the graph page to look better. The second graph for some reason does not appear on the page yet.

--- a/portfolio/src/main/resources/templates/fragmentsGroup/groupStatistics.html
+++ b/portfolio/src/main/resources/templates/fragmentsGroup/groupStatistics.html
@@ -10,10 +10,15 @@
             </li>
         </ul>
     </div>
-    <div class="skills-categories-chart__flex-container">
-        <div id="group-chart__categories-chart"></div>
-        <div id="group-chart__skills-chart"></div>
-        <div id="group-chart__evidence-chart"></div>
+    <div class="data-charts__flex-container">
+        <div class="evidence-time-chart__flex-container">
+            <div id="group-chart__evidence-chart"></div>
+            <div id="group-chart__time-chart"></div>
+        </div>
+        <div class="skills-categories-chart__flex-container">
+            <div id="group-chart__categories-chart"></div>
+            <div id="group-chart__skills-chart"></div>
+        </div>
     </div>
 </div>
 
