--- a/portfolio/src/main/resources/static/styles/group/group.css
+++ b/portfolio/src/main/resources/static/styles/group/group.css
@@ -258,13 +258,19 @@ html {
     flex-direction:column;
 }
 
-.skills-categories-chart__flex-container {
+.data-charts__flex-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.skills-categories-chart__flex-container, .evidence-time-chart__flex-container {
     display: flex;
     flex-direction: row;
     justify-content: center;
 }
 
-#group-chart__categories-chart, #group-chart__skills-chart, #group-chart__evidence-chart {
+#group-chart__categories-chart, #group-chart__skills-chart, #group-chart__evidence-chart, #group-chart__time-chart {
     flex-grow: 1;
     overflow: hidden;
     height: 500px;
