#fix Added links to commits and made sure they wrap properly.

--- a/portfolio/src/main/resources/static/styles/evidence/addEvidence.css
+++ b/portfolio/src/main/resources/static/styles/evidence/addEvidence.css
@@ -269,6 +269,11 @@ p {
 .commit-author {
     color: #636363;
     font-size: small;
+    overflow-wrap: anywhere;
+}
+
+.commit-description {
+    overflow-wrap: anywhere;
 }
 
 #users-input {
