--- a/portfolio/src/main/resources/templates/fragments/webLink.html
+++ b/portfolio/src/main/resources/templates/fragments/webLink.html
@@ -6,7 +6,7 @@
   <em th:if="${!web.isSafe()}" class="bi bi-unlock"></em>
   <a target="_blank" th:text="${#strings.abbreviate(web.getLink(),80)}"
      th:href="${web.isSafe() ? 'https://' +web.getLink() : 'http://' +web.getLink()}"></a>
-  <i th:id="${webLinks.indexOf(web)}" class="bi bi-pencil-fill" data-bs-toggle="modal"
+  <i th:if="${owner}" th:id="${webLinks.indexOf(web)}" class="bi bi-pencil-fill" data-bs-toggle="modal"
      th:data-bs-target="'#addingWeblink_' + ${evidenceId}" style="margin-left: auto"
      th:data-web-link-name="${web.getName}"
      th:data-web-link-link="${web.getLink}"
