--- a/portfolio/src/main/resources/templates/fragmentsGroup/groupStatistics.html
+++ b/portfolio/src/main/resources/templates/fragmentsGroup/groupStatistics.html
@@ -2,8 +2,8 @@
 
 <div class="group-statistics__flex-container">
     <br>
-    <div class="dropdown">
-        <button class="btn btn-primary dropdown-toggle dropdown__button" type="button" data-toggle="dropdown">Refine Graphs</button>
+    <div class="dropdown graph__dropdown">
+        <button class="btn btn-primary dropdown-toggle graphs-dropdown__button" type="button" data-toggle="dropdown">Refine Graphs</button>
         <ul class="dropdown-menu">
             <li th:each="dateRefineOption: ${dateRefiningOptions}">
                 <a class="dropdown__link" th:text="${dateRefineOption.getTitle()}" th:attr="onclick=|selectRefinement('${dateRefineOption.getStartDate()}', '${dateRefineOption.getEndDate()}')|"></a>
