--- a/portfolio/src/main/resources/static/styles/navbar.css
+++ b/portfolio/src/main/resources/static/styles/navbar.css
@@ -199,7 +199,7 @@ h5 {
 }
 
 /******************** Project Selection ********************/
-.dropdown {
+.navbar__dropdown {
     display: block;
     position: relative;
     margin: 0;
@@ -235,7 +235,7 @@ h5 {
     text-decoration: none;
 }
 
-.dropdown-content {
+.navbar__dropdown-content {
     display: none;
     position: absolute;
     width: 100%;
@@ -243,7 +243,7 @@ h5 {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
-.dropdown-content.active {
+.navbar__dropdown-content.active {
     background-color: rgba(168, 40, 16, 0.5); /* Accent Colour */
 }
 
