--- a/portfolio/src/main/resources/static/styles/group/group.css
+++ b/portfolio/src/main/resources/static/styles/group/group.css
@@ -53,6 +53,30 @@ html {
     word-wrap: break-word;
 }
 
+.group__button-wrapper {
+    position: absolute;
+    top: 5.5rem;
+    right: 0;
+}
+
+.group__button-wrapper button {
+    /* Position & Size */
+    margin-right: 1rem;
+    padding: 0 1rem 0 1rem;
+    min-width: 4rem;
+    height: 3rem;
+    line-height: 3rem;
+
+    /* Text */
+    font-size: 1rem;
+    font-weight: 400;
+}
+
+.group__button-wrapper button:hover {
+    background-color: rgba(168, 40, 16, 0.3); /* Accent Colour */
+    cursor: pointer;
+}
+
 /* Tab Buttons */
 
 .carousel-buttons {
