--- a/portfolio/src/main/resources/templates/templatesGroup/group.html
+++ b/portfolio/src/main/resources/templates/templatesGroup/group.html
@@ -33,9 +33,14 @@
 <div id="page-content" class="constrict">
   <div id="group">
     <header class="group_header flex-column">
-      <h1 class="group-short_name" th:text="${currentProject.getName} + ': ' + ${group.getShortName()}"></h1>
-      <h2 class="group-long_name" th:text="${group.getLongName()}"></h2>
+        <h1 class="group-short_name" th:text="${currentProject.getName} + ': ' + ${group.getShortName()}"></h1>
+        <h2 class="group-long_name" th:text="${group.getLongName()}"></h2>
     </header>
+    <div class="group__button-wrapper flex-row">
+      <form th:action="@{editGroup-{id}(id=${group.getGroupId})}" th:method="get" th:if="${group.getGroupId} >= 0")>
+        <button type="submit">Edit</button>
+      </form>
+    </div>
   </div>
 
   <div class="carousel-buttons flex-row">
