--- a/portfolio/src/main/resources/static/styles/evidence/portfolio.css
+++ b/portfolio/src/main/resources/static/styles/evidence/portfolio.css
@@ -109,6 +109,11 @@
     width: fit-content;
 }
 
+.evidence-form__commits-title {
+    border-bottom: 1px solid var(--color-accent);
+    width: fit-content;
+}
+
 .categories {
     background-color: var(--color-secondary);
     margin: 5px;
