--- a/portfolio/src/main/resources/templates/fragmentsGroup/groupStatistics.html
+++ b/portfolio/src/main/resources/templates/fragmentsGroup/groupStatistics.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<link rel="stylesheet" th:href="@{styles/stylesheet.css}">
+<link rel="stylesheet" th:href="@{styles/group/group.css}">
+<link rel="stylesheet" th:href="@{styles/group/groups.css}">
 
 <div class="group-statistics__flex-container">
     <br>
     <div class="dropdown">
-        <button class="btn btn-primary dropdown-toggle dropdown__button" type="button" data-toggle="dropdown">Refine Graphs</button>
+        <button type="button" class="btn btn-primary dropdown-toggle dropdown__button" data-bs-toggle="dropdown">Refine Graphs</button>
         <ul class="dropdown-menu">
             <li th:each="dateRefineOption: ${dateRefiningOptions}">
-                <a class="dropdown__link" th:text="${dateRefineOption.getTitle()}" th:attr="onclick=|selectRefinement('${dateRefineOption.getStartDate()}', '${dateRefineOption.getEndDate()}')|"></a>
+                <a class="dropdown-item" th:text="${dateRefineOption.getTitle()}" th:attr="onclick=|selectRefinement('${dateRefineOption.getStartDate()}', '${dateRefineOption.getEndDate()}')|"></a>
             </li>
         </ul>
     </div>
+
     <div class="skills-categories-chart__flex-container">
         <div id="group-chart__categories-chart"></div>
         <div id="group-chart__skills-chart"></div>
