--- a/portfolio/src/main/resources/static/styles/group/group.css
+++ b/portfolio/src/main/resources/static/styles/group/group.css
@@ -309,7 +309,6 @@ html {
     position: relative;
     border: 1px solid var(--color-accent) !important;
     color: black;
-
     background-color: var(--color-complement) !important;
     padding: 10px;
     height: 3rem;
@@ -327,6 +326,15 @@ html {
     height: 3rem;
     box-shadow: none !important;
     font-size: 1rem;
+}
+
+.graphs-dropdown__button:active {
+    background-color: #f78e55;
+}
+
+
+.chart__dropdown_item:active {
+    background-color: #f78e55;
 }
 
 .dropdown-menu {
