--- a/portfolio/src/main/resources/templates/fragments/evidence.html
+++ b/portfolio/src/main/resources/templates/fragments/evidence.html
@@ -86,7 +86,7 @@
                 <!-- Edit/Delete icons -->
                 <div class="evidence-title-div__buttons">
                     <div th:if="${owner}" class="evidence-title-div__button">
-                        <form action="#" class="evidence-title--form" th:action="@{deleteEvidence-{evidenceId}(evidenceId=${evidence.getId})}" onSubmit="return confirm('Are you sure you want to delete this piece of evidence?\nThis action cannot be undone.')" th:method="delete" >
+                        <form action="#" class="evidence-title--form" th:action="@{deleteEvidence-{evidenceId}(evidenceId=${evidence.getId})}" th:onSubmit="return confirm('Are you sure you want to delete evidence: ' + [[${evidence.getTitle}]] + '?\nThis action cannot be undone.')" th:method="delete" >
                             <button type="submit" class="evidence-title--icon_container-delete">
                                 <i class="bi bi-trash evidence-title--icon"></i>
                             </button>
