--- a/portfolio/src/main/resources/templates/templatesEvidence/portfolio.html
+++ b/portfolio/src/main/resources/templates/templatesEvidence/portfolio.html
@@ -17,6 +17,7 @@
       const CONTEXT = [[${@environment.getProperty('PORTFOLIO_CONTEXT')}]];
       let EVIDENCE_IDS = [];
       let middle_id;
+      const MAX_WEBLINKS = [[ ${maxWeblinks} ]];
     </script>
     <script rel="script" th:src="@{scripts/evidence/saveWeblinks.js}"></script>
     <title>Portfolio</title>
