--- a/portfolio/src/main/resources/templates/templatesGroup/group.html
+++ b/portfolio/src/main/resources/templates/templatesGroup/group.html
@@ -4,6 +4,7 @@
 <head>
   <title th:text="${group.getShortName()}"></title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
   <link th:rel="stylesheet" th:href="@{webjars/bootstrap/5.1.3/css/bootstrap.min.css} "/>
   <script th:src="@{webjars/bootstrap/5.1.3/js/bootstrap.min.js}"></script>
   <script src="https://www.gstatic.com/charts/loader.js"></script>
