--- a/portfolio/src/main/resources/static/styles/evidence/portfolio.css
+++ b/portfolio/src/main/resources/static/styles/evidence/portfolio.css
@@ -23,6 +23,7 @@
     display: flex;
     justify-content: space-between;
     width: 310px;
+    margin-bottom: 10px;
 }
 
 .portfolio-navigation__button {
