--- a/portfolio/src/main/resources/static/styles/project/projectSummaries.css
+++ b/portfolio/src/main/resources/static/styles/project/projectSummaries.css
@@ -35,7 +35,7 @@ html {
     padding-top: 0;
     padding-bottom: 0;
     border: 1px solid var(--color-accent);
-    border-radius: 1.5rem;
+    border-radius: 10px;
     background-color: var(--color-complement);
 }
 
