--- a/portfolio/src/main/resources/static/styles/user/loginPage.css
+++ b/portfolio/src/main/resources/static/styles/user/loginPage.css
@@ -1,5 +1,31 @@
 @charset "ISO-8859-1";
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+:root {
+    /* CSS variables */
+    --color-primary: #FBAA60;
+    --color-secondary: #FADFC6FF;
+    --color-tertiary: #F67B50;
+    --color-complement: #F4EAE6;
+    --color-accent: #A82810;
+}
+
+/* Hide scrollbar */
+html::-webkit-scrollbar {
+    /* Chrome, Safari, Opera */
+    display: none;
+}
+
+html {
+    -ms-overflow-style: none; /* IE, Edge */
+    scrollbar-width: none; /* Firefox */
+}
+
+/* Simple class for hiding components */
+.hidden {
+    display: none !important;
+}
+
+/******************** Login Page ********************/
 
 body{
     background: #FBAA60;
@@ -93,13 +119,23 @@ form .row input::placeholder{
     text-decoration: underline;
 }
 .wrapper form .button input{
-    color: #fff;
-    font-size: 20px;
-    font-weight: 500;
-    padding-left: 0px;
-    background: black;
-    border: 1px solid #16a085;
+    display: block;
+    position: relative;
+
+    border: 1px solid var(--color-accent);
+    border-radius: 10px;
+    background-color: var(--color-complement);
+    padding: 0 2rem 0 2rem;
+    margin-top: 1rem;
+}
+
+.wrapper form .button input:hover{
     cursor: pointer;
+    background-color: rgba(168, 40, 16, 0.3); /* Accent Colour */
+}
+
+.register-navigation {
+    margin-top: -40px;
 }
 
 .wrapper form .signup-link{
