--- a/portfolio/src/main/resources/templates/templatesUser/login.html
+++ b/portfolio/src/main/resources/templates/templatesUser/login.html
@@ -28,7 +28,7 @@
                 <input type="submit" value="Login">
             </div>
         </form>
-        <form th:action="@{register}">
+        <form class="register-navigation" th:action="@{register}">
             <div class="row button">
                 <label>
                     <input type="submit" value="Register">
