--- a/portfolio/src/main/resources/templates/templatesUser/register.html
+++ b/portfolio/src/main/resources/templates/templatesUser/register.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <!--Link designed as button will take the user back to login-->
-        <a th:href="@{login}" class="button">Back</a>
+        <a th:href="@{login}" class="register-page__button">Back</a>
 
         <div class="wrapper">
             <h1>Sign Up</h1>
@@ -93,7 +93,7 @@
                 <br><br>
 
                 <!--SUBMIT-->
-                <input class="button" type="submit" value="Submit" />
+                <input class="register-page__button" type="submit" value="Submit" />
             </div>
         </form>
 
