#refactor Added a margin to username, so it sits in the middle of the navbar

--- a/portfolio/src/main/resources/static/styles/navbar.css
+++ b/portfolio/src/main/resources/static/styles/navbar.css
@@ -101,6 +101,9 @@ h5 {
     text-decoration: none;
 }
 
+.header__username-text {
+    margin-top: 18px;
+}
 
 
 /******************** Side Navigation bar ********************/
