--- a/portfolio/src/main/resources/templates/fragments/header.html
+++ b/portfolio/src/main/resources/templates/fragments/header.html
@@ -24,7 +24,7 @@
                 </div>
             </li>
             <li class="header__item">
-                <p th:text="${user.username}"></p>
+                    <p class="header__username-text" th:text="${user.username}"></p>
             </li>
         </ul>
     </header>
