#Feature Added a filter to the retrieved evidence to retrieve only evdience that was dated within the previous fortnight

--- a/portfolio/src/main/resources/templates/fragmentsGroup/groupHome.html
+++ b/portfolio/src/main/resources/templates/fragmentsGroup/groupHome.html
@@ -16,8 +16,8 @@
 <div class="group-home">
     <div class="row">
 
-        <div class="col-12 col-lg">
-            <h2>Groups Evidence</h2>
+        <div class="col-12 col-lg groupsEvidence">
+            <h2>Recent Evidence</h2>
             <div th:replace="fragments/evidence"></div>
         </div>
 
